# StatusCheckerAppServce

./: .gitignore  CMakeLists.txt  app.qrc  config.ini  config_service.ini  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  service_main.cpp  simpleserver.cpp  simpleserver.h
